IntelliJ code cleanup